--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.google-sharedlocations",
-  "version": "0.0.7",
+  "version": "1.0.0",
   "description": "Google Shared Locations Adapter",
   "author": {
     "name": "Christian Vorholt",
@@ -18,6 +18,9 @@
     "cheerio": "^1.0.0-rc.2"
   },
   "devDependencies": {
+	"gulp": "^3.9.1",
+    "mocha": "^4.1.0",
+    "chai": "^4.1.2"  
   },
   "bugs": {
     "url": "https://github.com/t4qjXH8N/ioBroker.google-sharedlocations/issues"
