--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.google-sharedlocations",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Google Shared Locations Adapter",
   "author": {
     "name": "Christian Vorholt",
@@ -16,6 +16,10 @@
   "dependencies": {
     "request": ">=2.83.0",
     "cheerio": "^1.0.0-rc.2"
+  },
+  "scripts": {
+    "test": "node node_modules/mocha/bin/mocha --exit",
+    "install": "node main.js --install"
   },
   "devDependencies": {
 	"gulp": "^3.9.1",
