--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.google-sharedlocations",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Google Shared Locations Adapter",
   "author": {
     "name": "Christian Vorholt",
@@ -18,8 +18,7 @@
     "cheerio": "^1.0.0-rc.2"
   },
   "scripts": {
-    "test": "node node_modules/mocha/bin/mocha --exit",
-    "install": "node main.js --install"
+    "test": "node node_modules/mocha/bin/mocha --exit"
   },
   "devDependencies": {
 	"gulp": "^3.9.1",
