--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
   },
   "homepage": "https://github.com/t4qjXH8N/ioBroker.google-sharedlocations",
   "readme": "https://github.com/t4qjXH8N/ioBroker.google-sharedlocations/blob/master/README.md",
-  "keywords": ["ioBroker", "geofence", "google", "google shared locations"],
+  "keywords": [
+    "ioBroker",
+    "geofence",
+    "google",
+    "google shared locations"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/t4qjXH8N/ioBroker.google-sharedlocations.git"
@@ -21,9 +26,10 @@
     "test": "node node_modules/mocha/bin/mocha --exit"
   },
   "devDependencies": {
-	"gulp": "^3.9.1",
+    "gulp": "^3.9.1",
     "mocha": "^4.1.0",
-    "chai": "^4.1.2"  
+    "chai": "^4.1.2",
+    "@iobroker/adapter-core": "^1.0.3"
   },
   "bugs": {
     "url": "https://github.com/t4qjXH8N/ioBroker.google-sharedlocations/issues"
