fixed warnings and updated dependencies

--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "url": "https://github.com/t4qjXH8N/ioBroker.google-sharedlocations.git"
   },
   "dependencies": {
-    "request": "^2.88.0",
+    "@iobroker/adapter-core": "^2.4.0",
     "cheerio": "^1.0.0-rc.3",
-    "@iobroker/adapter-core": "^1.0.3"
+    "request": "^2.88.2"
   },
   "scripts": {
     "test": "npm run test:package && npm run test:unit",
@@ -30,10 +30,13 @@
     "test:integration": "mocha test/integration --exit"
   },
   "devDependencies": {
-    "gulp": "^4.0.0",
-    "mocha": "^4.1.0",
-    "chai": "^4.1.2",
-    "@iobroker/testing": "^1.1.10"
+    "@types/gulp": "^4.0.6",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^14.0.6",
+    "gulp": "^4.0.2",
+    "mocha": "^7.2.0",
+    "chai": "^4.2.0",
+    "@iobroker/testing": "^2.2.0"
   },
   "bugs": {
     "url": "https://github.com/t4qjXH8N/ioBroker.google-sharedlocations/issues"
