--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.google-sharedlocations",
-  "version": "2.0.3",
+  "version": "2.1.0",
   "description": "Google Shared Locations Adapter",
   "author": {
     "name": "Christian Vorholt",
@@ -21,7 +21,7 @@
   "dependencies": {
     "@iobroker/adapter-core": "^2.4.0",
     "cheerio": "^1.0.0-rc.5",
-    "request": "^2.88.2"
+    "axios": "^0.21.1"
   },
   "scripts": {
     "test": "npm run test:package && npm run test:unit",
